--- a/app/assets/stylesheets/shared/_common.scss
+++ b/app/assets/stylesheets/shared/_common.scss
@@ -75,6 +75,7 @@
     display:          flex;
     flex-direction:   row;
     justify-content:  space-between;
+    width:            inherit;
     margin:           0;
     padding:          $page-padding-y $page-padding-x;
     color:            white;
