--- a/app/assets/stylesheets/shared/_debug.scss
+++ b/app/assets/stylesheets/shared/_debug.scss
@@ -8,7 +8,6 @@
 
 .session-debug {
 
-    width:      100%;
     word-break: break-word;
 
     &.footer-section {
